# Data_Clustering

./: .gitignore  .prettierrc  CMakeLists.txt  Performance_Analysis.md  cluster.h  config.h  data.cc  data.h  k_means.cc  k_means.h  main.cc  math.cc  math.h  mod_iris_bezdek.py  reader.cc  reader.h  results.csv  results.xlsx  util.h  validate.cc  validate.h  validation_results.csv
datasets/: attributes.txt  iris_bezdek_mod.txt
results/: ext_validation_results.csv  ext_validation_results.xlsx  results.xlsx  validation_results.xlsx
src/: CMakeLists.txt  main.cc
src/algo/: k_means.cc  k_means.h
src/data/: data.cc  data.h  point.h
src/external_validation/: external_val.cc  external_val.h  main.cc
src/util/: config.h  math.h  util.h
src/validation/: main.cc  validate.cc  validate.h
